# cosmic_shower

./: .gitignore  Dockerfile  LICENSE  README.md
changes/: geant4-patch
cmake/: CMakeLists.txt  files.cmake  includedirectories.cmake
config/: global.h.in
config/subdir-skel/: files.cmake  include.h  includedirectories.cmake  libraries.cmake  subdirectories.cmake
include/: actioninitialization.h  detectorconstruction.h  eventaction.h  global.h  primarygeneratoraction.h  runaction.h  steppingaction.h
include/actions/: eventaction.h  runaction.h  steppingaction.h
source/: CMakeLists.txt
source/cmake/: CMakeLists.txt  files.cmake
source/config/: global.h.in  mem.plt.in  plot.plt.in  run  rundata.plt  shower.cfg  shower.cfg.in  start  vis.mac.in
source/config/subdir-skel/: global.h  options.cmake  src.cpp
source/config/subdir-skel/subdir/: CMakeLists.txt  files.cmake
source/include/: actioninitialization.h  atmosphere_layers.h  benchmark.h  benchmarkmanager.h  cancelcriterion.h  cluster.h  clusterrule.h  configmanager.h  configuration.h  core.cpp  core.h  corerunner.h  detectorconstruction.h  global.h  magneticfield.h  node.h  parametermanager.h  parameters.h  particlecollector.h  particledistributor.h  particlescorer.h  physicslist.h  recorder.h  recordermanager.h  runner.h  timemanager.h  vis.h  visualisation.h
source/include/actions/: actioninitialization.h  eventaction.h  primarygeneratoraction.h  stackingaction.h  steppingaction.h
source/include/detector/: detaileddetectorhit.h  detailedsensitivedetector.h  detectorconstruction.h  detectorhit.h  sensitivedetector.h
source/include/physics/: decayconstructor.h  hadronelasticconstructor.h  hadroninelasticconstructor.h  particlekiller.h  physicslist.h  stoppingconstructor.h
source/src/: actioninitialization.cpp  atmosphere_layers.cpp  benchmark.cpp  benchmarkmanager.cpp  cancelcriterion.cpp  cluster.cpp  clusterrule.cpp  configmanager.cpp  configuration.cpp  core.cpp  core.h  corerunner.cpp  detectorconstruction.cpp  magneticfield.cpp  main.cpp  node.cpp  parametermanager.cpp  parameters.cpp  particlecollector.cpp  particledistributor.cpp  particlescorer.cpp  physicslist.cpp  recorder.cpp  recordermanager.cpp  runner.cpp  timemanager.cpp  vis.cpp  visualisation.cpp
source/src/actions/: actioninitialization.cpp  eventaction.cpp  primarygeneratoraction.cpp  runaction.cpp  stackingaction.cpp  steppingaction.cpp
source/src/detector/: detaileddetectorhit.cpp  detailedsensitivedetector.cpp  detectorconstruction.cpp  detectorhit.cpp  sensitivedetector.cpp
source/src/physics/: decayconstructor.cpp  hadronelasticconstructor.cpp  hadroninelasticconstructor.cpp  magneticfield.cpp  particlekiller.cpp  physicslist.cpp  stoppingconstructor.cpp
src/: actioninitialization.cpp  detectorconstruction.cpp  eventaction.cpp  main.cpp  primarygeneratoraction.cpp  runaction.cpp  steppingaction.cpp
src/actions/: eventaction.cpp  primarygeneratoraction.cpp
